got rid of video container to position video better so it aligns with navbar and fixed about us nav bar link so it scrolls to the correct position.

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,25 +195,6 @@ body {
   margin-bottom: 0px;
 }
 
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  z-index: 10;
-}
-
-.video-container iframe,
-.video-container object,
-.video-container embed,
-.video-container video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .dimer {
   max-width: 100px;
 }
