--- a/scss/home.scss
+++ b/scss/home.scss
@@ -1,38 +1,22 @@
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    z-index: 10;
-    // margin-right: auto;
-    // margin-left: auto;
-    // right: -60px;
-    // left: -60px;
-}
-
-.video-container iframe,
-.video-container object,
-.video-container embed,
-.video-container video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-// @media (min-width: 768px) {
-//   .video-container {
-//     width: 750px;
-//   }
+// .video-container {
+//     position: relative;
+//     padding-bottom: 56.25%;
+//     height: 0;
+//     overflow: hidden;
+//     z-index: 10;
+//     // margin-right: auto;
+//     // margin-left: auto;
+//     // right: -60px;
+//     // left: -60px;
 // }
-// @media (min-width: 992px) {
-//   .video-container {
-//     width: 970px;
-//   }
-// }
-// @media (min-width: 1200px) {
-//   .video-container {
-//     width: 1170px;
-//   }
+//
+// .video-container iframe,
+// .video-container object,
+// .video-container embed,
+// .video-container video {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
 // }
